# techniki-efektywnego-programowania

./: README.md  konkurs.txt
Miniprojekt/: CMakeLists.txt  visualize.py
Miniprojekt/.cache/clangd/index/: Evaluator.cpp.4BF35428D2013393.idx  Evaluator.hpp.82BA060B57F4A8D8.idx  Optimizer.cpp.2D6A8B8C544028DA.idx  Optimizer.hpp.62D5F43ED1FD41C0.idx  ProblemData.cpp.DA305C0911B763B9.idx  ProblemData.hpp.61C259BCA1E10202.idx  Solution.hpp.716D6B9A581B4DE0.idx  main.cpp.E3A0524CE4D464FE.idx
Miniprojekt/include/: Config.hpp  Evaluator.hpp  Individual.hpp  Optimizer.hpp  ProblemData.hpp  Solution.hpp
Miniprojekt/src/: Config.cpp  Evaluator.cpp  Optimizer.cpp  ProblemData.cpp  main.cpp
lab1_2/zad1/: CMakeLists.txt
lab1_2/zad1/include/: table.hpp
lab1_2/zad1/src/: main.cpp  table.cpp
lab1_2/zad2/: CMakeLists.txt
lab1_2/zad2/include/: table2Dim.hpp
lab1_2/zad2/src/: table2Dim.cpp
lab1_2/zad2_3/src/: main.cpp
lab1_2/zad4/: CMakeLists.txt
lab1_2/zad4/include/: Table.hpp
lab1_2/zad4/src/: Table.cpp  main.cpp
lab3_4/: CMakeLists.txt
lab3_4/include/: Number.hpp
lab3_4/src/: Number.cpp  main.cpp
lab5_6/: CMakeLists.txt  notatki.txt
lab5_6/include/: CmdInterface.hpp  CmdStatus.hpp  Node.hpp  StringHandler.hpp  Tree.hpp  Variable.hpp
lab5_6/src/: CmdInterface.cpp  Node.cpp  StringHandler.cpp  Tree.cpp
lab7_8/: CMakeLists.txt  notatki.txt
lab7_8/include/: CmdInterface.hpp  Error.hpp  Logger.hpp  Result.hpp  StringHandler.hpp  Tree.hpp
lab7_8/src/: CmdInterface.cpp  Logger.cpp  Result.cpp  StringHandler.cpp  Tree.cpp  main.cpp
lab9_10/: CMakeLists.txt
lab9_10/include/: CmdInterface.hpp  Counter.hpp  Error.hpp  MySmartPtr.hpp  Node.hpp  Result.hpp  Tree.hpp  Variable.hpp
lab9_10/src/: CmdInterface.cpp  Counter.cpp  Error.cpp  Node.cpp  Tree.cpp
modyfkacja/: CMakeLists.txt
modyfkacja/include/: Book.hpp  MySmartPtr.hpp
modyfkacja/src/: main.cpp
